--- a/src/utils/package.xml
+++ b/src/utils/package.xml
@@ -3,7 +3,7 @@
   <name>utils</name>
   <version>0.0.0</version>
   <description>The utils package</description>
-  <maintainer email="simulator@todo.todo">simulator</maintainer>
+  <maintainer email="drivex_bfmc2023@todo.todo">drivex_bfmc2023</maintainer>
   <license>Bosch ECC</license>
 
   <buildtool_depend>catkin</buildtool_depend>
